@@ -1,38 +1,7 @@
 :root {
-  --richBlack: #113537;
-  --charcoal: #37505c;
-  --mauveTaupe: #96616b;
-  --ultraRed: #f76f8e;
-  --blanchAlmond: #ffead0;
-
-  --oceanGreen: #61c9a8;
-  --maroon: #a53860;
-  --englishViolet: #4c3b4d;
-  --antiqueWhite: #ffeedb;
-  --silverMetallic: #ada8b6;
-
-  --primary: #7719e6;
-  /* --bg-color: #3a0d6e; */
-  --bg-color: rgba(20, 20, 20, 1);
-  --purp2: #ba7dff;
-  --purp3: #a55ff5;
-  /* --secondary: #f5f35f; */
-  --secondary: #7719e6;
-  --yellow2: #a8a720;
+  --linkHover: #7719e6;
   --accent: #19e6d5;
-  --accent2: #88e619;
-  --section-color: #4519e6;
-
   --white: #ffffff;
-  --gray1: #333333;
-  --gray2: #555555;
-  --gray3: #cccccc;
-  --gray4: #aaaaaa;
-  --gray5: #1a1a1a;
-  --gray6: #2b2b2b;
-  --black: #030303;
-
-  /* --nav-background: rgba(43, 43, 43, .8); */
   --nav-background: rgba(128, 128, 128, 0.2);
   --main-background: #1a1a1a;
 
@@ -40,12 +9,16 @@
   --link_font: "Bebas Neue", Impact, Haettenschweiler, "Arial Narrow Bold",
     sans-serif;
 }
-
+html {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: var(--main-background);
   color: var(--white);
   margin: 0;
+  padding: 0;
   font-family: "roboto";
   background-repeat: no-repeat;
 }
@@ -62,17 +35,19 @@ a {
   color: var(--accent);
 }
 a:hover {
-  color: var(--secondary);
+  color: var(--linkHover);
   text-decoration: none;
 }
-
+#top {
+  margin: 0;
+}
 nav {
   background-color: var(--nav-background);
   color: var(--white);
   display: flex;
   align-items: flex-end;
   padding: 2% 1%;
-  border-radius: 0 0 10px 10px;
+  width: 100%;
 }
 
 .nav-links {
